Version 2.0.20 release (2014/10/30)
-------------------------------------------

Added meals attendance report for a month.

Fix for generating assessments and reports columns for a new subject
class.

Completed register is now the default page for register.

Traffic lights added for Report on Assessments.


Version 2.0.19 release (2014/10/23)
-------------------------------------------

Report on Assessments fetches assessments for All stages.

Report_reports_print fetches contact details (nationality, language) 
for students.

Tarifs summary displayed also from concepts list.

Fees tabled indexed to speed up its content.

Totals for charges applied.

Added the option to import profiles from csv file.

Added capistrano files to start deploying.

Added Dropbox API to link attachments.

Fix for editing report scores in the modal.

Added again the option to have statistics for assessments.

SMS option for absences.

Fix to saving negative grades in Markbook.


Version 2.0.18 release (2014/10/14)
-------------------------------------------

Fix for Markbook report modal saving grades.

Added Class sizes view by section/year group.

Added Register Statistics by year group.

Removed clicktoemail button for contacts in student view.

Fix for staff list checkboxes (table view) and added absent button.

Separated message log link from the Contacts block and 
added clicktoemail for the first two contacts.

New SMS message lib for Esendex API service. Requires path and account
credentials to be added as CFGs.

Fix to message_action for sending SMS.



Version 2.0.17 release (2014/10/08)
-------------------------------------------

DB synchronisation script (only updates students).

Meals attendance added to register.

New config option to choose the mandateid for fees: enrolno 
or student_id.

Added staff list option to use a photo wall.

Year export for staff attendance.

Tiny fixes for staff_list, manage subject reports, api.

Added week register print for a class.
