@@ -1,6 +1,8 @@
 Version 2.0.20 release (2014/10/30)
 -------------------------------------------
 
+Section list added to Infobook search.
+
 Added meals attendance report for a month.
 
 Fix for generating assessments and reports columns for a new subject
